FileOperations tests round 1.