@@ -16,13 +16,6 @@
 
 package org.entrystore.impl;
 
-import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.junit.jupiter.api.Assertions.assertTrue;
-import static org.junit.jupiter.api.Assertions.fail;
-
-import java.net.URI;
-import java.util.HashSet;
-import java.util.Set;
 import org.entrystore.AuthorizationException;
 import org.entrystore.Context;
 import org.entrystore.Entry;
@@ -35,7 +28,18 @@ import org.entrystore.repository.test.TestSuite;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
+import java.net.URI;
+import java.util.HashSet;
+import java.util.Set;
+
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
+
 /**
+ *
  */
 public class PrincipalManagerImplTest extends AbstractCoreTest {
 
@@ -49,13 +53,13 @@ public class PrincipalManagerImplTest extends AbstractCoreTest {
 	@Test
 	public void contextAccessCheck() {
 		// Check editing rights in mouse for Donald since he is in
-		// friendsOfMickey group which has read and write access to mouse context.
+		// friendsOfMickey group that has read and write access to mouse context.
 		pm.setAuthenticatedUserURI(pm.getPrincipalEntry("Donald").getResourceURI());
 		Context mouse = cm.getContext("mouse");
 		Set<AccessProperty> rights = pm.getRights(mouse.getEntry());
 		assertTrue(rights.contains(AccessProperty.ReadMetadata)); //Because guest has rights
 		assertTrue(rights.contains(AccessProperty.WriteResource)); //Because in friendsOfMickeygroup
-		assertTrue(rights.size() == 2); //ReadResource is implicit when WriteResouce is set.
+		assertEquals(2, rights.size()); //ReadResource is implicit when WriteResouce is set.
 	}
 
 	@Test
@@ -76,8 +80,7 @@ public class PrincipalManagerImplTest extends AbstractCoreTest {
 		try {
 			mouse.createLink(null, URI.create("http://www.daisy2.org"), null);
 			fail("Daisy should not have access to create a link in mouse context where she has no rights.");
-		} catch (AuthorizationException ae) {
-
+		} catch (AuthorizationException ignored) {
 		}
 
 	}
@@ -95,7 +98,7 @@ public class PrincipalManagerImplTest extends AbstractCoreTest {
 		// Guest, check public access to duck and none to mouse.
 		pm.setAuthenticatedUserURI(pm.getGuestUser().getURI());
 		Context duck = cm.getContext("duck");
-		assertTrue(duck.get("1") != null); // since guest access is allowed on duck
+		assertNotNull(duck.get("1")); // since guest access is allowed on duck
 	}
 
 	@Test
@@ -114,7 +117,7 @@ public class PrincipalManagerImplTest extends AbstractCoreTest {
 		// friendsOfMickey group which has read and write access to mouse context.
 		pm.setAuthenticatedUserURI(pm.getPrincipalEntry("Donald").getResourceURI());
 		Context mouse = cm.getContext("mouse");
-		assertTrue(mouse.get("1") != null);
+		assertNotNull(mouse.get("1"));
 		mouse.createResource(null, GraphType.List, null, null);
 	}
 
@@ -125,7 +128,7 @@ public class PrincipalManagerImplTest extends AbstractCoreTest {
 
 		//	Mickey is owner of mouse context, and should be allowed to change it's ACL.
 		mouse.getEntry().addAllowedPrincipalsFor(AccessProperty.ReadResource,
-				pm.getPrincipalEntry("Daisy").getResourceURI());
+			pm.getPrincipalEntry("Daisy").getResourceURI());
 	}
 
 	@Test
@@ -134,7 +137,7 @@ public class PrincipalManagerImplTest extends AbstractCoreTest {
 		pm.setAuthenticatedUserURI(pm.getPrincipalEntry("Donald").getResourceURI());
 		//	Donald is not owner of mouse context, hence should not be allowed to change it's ACL.
 		assertThrows(AuthorizationException.class, () ->
-				mouse.getEntry().setAllowedPrincipalsFor(AccessProperty.ReadResource, new HashSet()));
+			mouse.getEntry().setAllowedPrincipalsFor(AccessProperty.ReadResource, new HashSet()));
 	}
 
 	@Test
@@ -146,8 +149,8 @@ public class PrincipalManagerImplTest extends AbstractCoreTest {
 		try {
 			mouse.get("2").getMetadataGraph();
 			fail("Donald should not have access to this entry since the entry overrides the context ACL " +
-					"and his rights to the surrounding context is not administrator/owner.");
-		} catch (AuthorizationException ae) {
+				"and his rights to the surrounding context is not administrator/owner.");
+		} catch (AuthorizationException ignored) {
 		}
 	}
 
@@ -156,16 +159,16 @@ public class PrincipalManagerImplTest extends AbstractCoreTest {
 	public void usersCheck() {
 		pm.setAuthenticatedUserURI(pm.getAdminUser().getURI());
 		Group userGroup = pm.getUserGroup();
-		assertTrue(userGroup.members().size() == 6);
+		assertEquals(6, userGroup.members().size());
 		try {
-			userGroup.removeMember(userGroup.members().get(0));
+			userGroup.removeMember(userGroup.members().getFirst());
 			fail("UserGroup contains more than three users.");
-		} catch (UnsupportedOperationException e) {
+		} catch (UnsupportedOperationException ignored) {
 		}
 		try {
 			pm.remove(userGroup.getEntry().getEntryURI());
 			fail("UserGroup is a systemEntry and should not be removable.");
-		} catch (DisallowedException e) {
+		} catch (DisallowedException ignored) {
 		}
 	}
 
